--- a/Bytetrack/requirements.txt
+++ b/Bytetrack/requirements.txt
@@ -6,7 +6,7 @@ aiosignal==1.3.1
 aiosqlite==0.18.0
 anyio==3.6.2
 appdirs==1.4.4
-apturl==0.5.2
+#apturl==0.5.2
 argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
 arrow==1.2.3
@@ -19,8 +19,8 @@ bcrypt==3.2.0
 beautifulsoup4==4.12.0
 bleach==6.0.0
 blinker==1.4
-botocore==1.29.76
-Brlapi==0.8.3
+#botocore==1.29.76
+#Brlapi==0.8.3
 certifi==2020.6.20
 cffi==1.15.1
 chardet==4.0.0
@@ -30,22 +30,22 @@ cmake==3.26.3
 colorama==0.4.4
 coloredlogs==15.0.1
 comm==0.1.3
-command-not-found==0.3
+#command-not-found==0.3
 contourpy==1.1.0
 croniter==1.3.14
 cryptography==3.4.8
-cupshelpers==1.0
+#cupshelpers==1.0
 cycler==0.11.0
-dbus-python==1.2.18
+#dbus-python==1.2.18
 debugpy==1.6.6
 decorator==5.1.1
-defer==1.0.6
+#defer==1.0.6
 defusedxml==0.7.1
 distlib==0.3.6
 distro==1.7.0
-distro-info===1.1build1
+#distro-info===1.1build1
 docker-pycreds==0.4.0
-duplicity==0.8.21
+#duplicity==0.8.21
 et-xmlfile==1.1.0
 executing==1.2.0
 fasteners==0.14.1
@@ -64,7 +64,7 @@ httplib2==0.20.2
 humanfriendly==10.0
 idna==3.3
 importlib-metadata==4.6.4
-iotop==0.6
+#iotop==0.6
 ipykernel==6.22.0
 ipython==8.12.0
 ipython-genutils==0.2.0
@@ -90,21 +90,21 @@ jupyterlab-pygments==0.2.2
 jupyterlab_server==2.21.0
 keyring==23.5.0
 kiwisolver==1.4.4
-language-selector==0.1
+#language-selector==0.1
 launchpadlib==1.10.16
 lazr.restfulclient==0.14.4
 lazr.uri==1.0.6
 lit==16.0.3
 lockfile==0.12.2
-louis==3.20.0
-macaroonbakery==1.3.1
+#louis==3.20.0
+#macaroonbakery==1.3.1
 Mako==1.1.3
 markdown-it-py==3.0.0
 MarkupSafe==2.0.1
 matplotlib==3.7.1
 matplotlib-inline==0.1.6
 mdurl==0.1.2
-meld==3.20.4
+#meld==3.20.4
 mistune==2.0.5
 monotonic==1.6
 more-itertools==8.10.0
@@ -168,13 +168,13 @@ PyNaCl==1.5.0
 pyparsing==2.4.7
 pyRFC3339==1.1
 pyrsistent==0.19.3
-python-apt==2.4.0+ubuntu1
+#python-apt==2.4.0+ubuntu1
 python-dateutil==2.8.2
-python-debian===0.1.43ubuntu1
+#python-debian===0.1.43ubuntu1
 python-json-logger==2.0.7
 pytz==2022.1
 pyxdg==0.27
-PyYAML==5.4.1
+#PyYAML==5.4.1
 pyzmq==25.0.2
 reportlab==3.6.8
 requests==2.28.2
@@ -183,7 +183,7 @@ rfc3986-validator==0.1.1
 rich==13.4.2
 s3fs==2023.4.0
 scipy==1.10.1
-screen-resolution-extra==0.0.0
+#screen-resolution-extra==0.0.0
 SecretStorage==3.3.1
 Send2Trash==1.8.0
 sentry-sdk==1.21.0
@@ -192,11 +192,11 @@ six==1.16.0
 smmap==5.0.0
 sniffio==1.3.0
 soupsieve==2.4
-SQLAlchemy==1.4.47
+#SQLAlchemy==1.4.47
 ssh-import-id==5.11
 stack-data==0.6.2
 sympy==1.12
-systemd-python==234
+#systemd-python==234
 tenacity==8.2.2
 terminado==0.17.1
 tinycss2==1.2.1
@@ -209,25 +209,5 @@ trash-cli==0.17.1.14
 triton==2.0.0
 typing_extensions==4.5.0
 tzdata==2023.3
-ubuntu-advantage-tools==8001
-ubuntu-drivers-common==0.0.0
-ufw==0.36.1
-unattended-upgrades==0.1
-uri-template==1.2.0
-urllib3==1.26.15
-usb-creator==0.3.7
-virtualenv==20.21.0
-wadllib==1.3.6
-wandb==0.15.0
-wcwidth==0.2.6
-webcolors==1.13
-webencodings==0.5.1
-websocket-client==1.5.1
-wrapt==1.15.0
-xdg==5
-xkit==0.0.0
-xmltodict==0.13.0
-y-py==0.5.9
-yarl==1.9.2
-ypy-websocket==0.8.2
-zipp==1.0.0
+#ubuntu-advantage-tools==8001
+#ubuntu-drivers-common==0.0.0
